--- a/Yelp/Base.lproj/Main.storyboard
+++ b/Yelp/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="145"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eLt-OU-VrT" id="G9v-fT-Rwd">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="144.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="145"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9ua-TD-KNu">
@@ -170,44 +170,44 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7mu-mS-axR">
-                                <rect key="frame" x="48" y="391" width="53.5" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="48" y="391" width="58.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BRG-Z1-okk">
-                                <rect key="frame" x="117.5" y="393.5" width="80" height="16"/>
+                                <rect key="frame" x="122.5" y="393.5" width="80" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="16" id="GYb-Ro-S87"/>
                                     <constraint firstAttribute="width" constant="80" id="VSQ-oI-IK6"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yLQ-9o-ngC">
-                                <rect key="frame" x="48" y="419" width="68" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="48" y="419" width="73.5" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categories:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jLd-nQ-hQF">
-                                <rect key="frame" x="48" y="448" width="88" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="48" y="448" width="95.5" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="flG-mg-tAD">
-                                <rect key="frame" x="205.5" y="391" width="42" height="21"/>
+                                <rect key="frame" x="210.5" y="391" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQV-of-Z96">
-                                <rect key="frame" x="124" y="419" width="42" height="21"/>
+                                <rect key="frame" x="129.5" y="419" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O9J-dR-csT">
-                                <rect key="frame" x="144" y="448" width="42" height="21"/>
+                                <rect key="frame" x="151.5" y="448" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -216,6 +216,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="7mu-mS-axR" firstAttribute="top" secondItem="PsP-m2-i9q" secondAttribute="bottom" constant="8" id="37m-LY-49i"/>
+                            <constraint firstItem="ZQV-of-Z96" firstAttribute="top" secondItem="yLQ-9o-ngC" secondAttribute="top" id="3W7-qc-c0k"/>
                             <constraint firstItem="RG9-86-MZB" firstAttribute="leading" secondItem="GPI-Ce-Z9W" secondAttribute="leadingMargin" constant="32" id="B3j-Jk-mis"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="O9J-dR-csT" secondAttribute="trailing" constant="8" id="Biy-oC-XNZ"/>
                             <constraint firstItem="flG-mg-tAD" firstAttribute="leading" secondItem="BRG-Z1-okk" secondAttribute="trailing" constant="8" id="DVE-3V-Btc"/>
@@ -223,17 +224,16 @@
                             <constraint firstItem="jLd-nQ-hQF" firstAttribute="top" secondItem="ZQV-of-Z96" secondAttribute="bottom" constant="8" id="FKE-Ul-t1Q"/>
                             <constraint firstItem="BRG-Z1-okk" firstAttribute="centerY" secondItem="7mu-mS-axR" secondAttribute="centerY" id="GBK-2l-mY3"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ZQV-of-Z96" secondAttribute="trailing" constant="8" id="HbG-Na-BSy"/>
-                            <constraint firstItem="ZQV-of-Z96" firstAttribute="centerY" secondItem="yLQ-9o-ngC" secondAttribute="centerY" id="JLm-iO-wYO"/>
                             <constraint firstItem="7mu-mS-axR" firstAttribute="leading" secondItem="GPI-Ce-Z9W" secondAttribute="leadingMargin" constant="32" id="MKX-gB-0zN"/>
                             <constraint firstItem="PsP-m2-i9q" firstAttribute="top" secondItem="RG9-86-MZB" secondAttribute="bottom" constant="8" id="O0A-YE-IHj"/>
                             <constraint firstItem="ZQV-of-Z96" firstAttribute="leading" secondItem="yLQ-9o-ngC" secondAttribute="trailing" constant="8" id="QEF-mc-ZjO"/>
                             <constraint firstItem="cXd-Uh-Qxs" firstAttribute="centerX" secondItem="GPI-Ce-Z9W" secondAttribute="centerX" id="TmB-iZ-bN6"/>
-                            <constraint firstItem="O9J-dR-csT" firstAttribute="centerY" secondItem="jLd-nQ-hQF" secondAttribute="centerY" id="Ugv-zL-nOD"/>
                             <constraint firstItem="RG9-86-MZB" firstAttribute="top" secondItem="cXd-Uh-Qxs" secondAttribute="bottom" constant="16" id="W7F-SM-lSZ"/>
                             <constraint firstItem="yLQ-9o-ngC" firstAttribute="top" secondItem="7mu-mS-axR" secondAttribute="bottom" constant="8" id="bO3-Hk-scl"/>
                             <constraint firstItem="jLd-nQ-hQF" firstAttribute="leading" secondItem="yLQ-9o-ngC" secondAttribute="leading" id="bP9-2h-aHJ"/>
                             <constraint firstItem="flG-mg-tAD" firstAttribute="centerY" secondItem="BRG-Z1-okk" secondAttribute="centerY" id="cTd-N1-wUJ"/>
                             <constraint firstItem="O9J-dR-csT" firstAttribute="leading" secondItem="jLd-nQ-hQF" secondAttribute="trailing" constant="8" id="fWr-ad-vbO"/>
+                            <constraint firstItem="O9J-dR-csT" firstAttribute="top" secondItem="jLd-nQ-hQF" secondAttribute="top" id="ide-hQ-WSt"/>
                             <constraint firstItem="BRG-Z1-okk" firstAttribute="leading" secondItem="7mu-mS-axR" secondAttribute="trailing" constant="16" id="igV-sv-dKh"/>
                             <constraint firstItem="PsP-m2-i9q" firstAttribute="leading" secondItem="GPI-Ce-Z9W" secondAttribute="leading" constant="32" id="ioK-uR-hmC"/>
                             <constraint firstAttribute="trailingMargin" secondItem="RG9-86-MZB" secondAttribute="trailing" constant="32" id="jBi-rn-mrS"/>
@@ -294,7 +294,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Sa6-hz-Jyx" id="7Ne-94-xHm">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IcO-nT-sXA">
@@ -326,7 +326,7 @@
                                         <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ja4-SL-2ft" id="qVg-Pg-DKP">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fWd-D5-HPL">
@@ -359,7 +359,7 @@
                                         <rect key="frame" x="0.0" y="116" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="p27-7f-SHf" id="5t2-QE-UYL">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NT3-aO-qmH">
@@ -386,6 +386,26 @@
                                             <outlet property="switchButton" destination="Vgy-aI-NO7" id="YJw-nJ-dMf"/>
                                             <outlet property="switchLabel" destination="NT3-aO-qmH" id="1Q1-XQ-OI3"/>
                                         </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShowAllCell" id="W2M-SN-nFX" customClass="ShowAllTableViewCell" customModule="Yelp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="160" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="W2M-SN-nFX" id="6ak-v9-CF3">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show all" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsG-65-pmf">
+                                                    <rect key="frame" x="155.5" y="12" width="64" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="bsG-65-pmf" firstAttribute="centerY" secondItem="6ak-v9-CF3" secondAttribute="centerY" id="IeY-DH-6tG"/>
+                                                <constraint firstItem="bsG-65-pmf" firstAttribute="centerX" secondItem="6ak-v9-CF3" secondAttribute="centerX" id="at2-Sy-0wS"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
